--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 click==8.0.4
 Flask==2.0.3
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.1.0
+importlib-metadata==4.11.2
 itsdangerous==2.1.0
+jinja-markdown==1.210911
 Jinja2==3.0.3
+Markdown==3.3.6
 MarkupSafe==2.1.0
+psycopg2==2.9.3
+Pygments==2.11.2
+pymdown-extensions==9.2
+pytailwindcss==0.1.4
+SQLAlchemy==1.4.31
+text-unidecode==1.3
 Werkzeug==2.0.3
+zipp==3.7.0
