--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alembic==1.7.6
 click==8.0.4
 Flask==2.0.3
 Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
@@ -8,9 +10,10 @@ importlib-metadata==4.11.2
 itsdangerous==2.1.0
 jinja-markdown==1.210911
 Jinja2==3.0.3
+Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.1.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 Pygments==2.11.2
 pymdown-extensions==9.2
 pytailwindcss==0.1.4
