--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Jinja2==3.0.3
 Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.1.0
-psycopg2-binary==2.9.3
+psycopg2==2.9.3
 Pygments==2.11.2
 pymdown-extensions==9.2
 pytailwindcss==0.1.4
