--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "static/books"]
+	path = static/books
+	url = https://Aspiring-Writer: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@github.com/Aspiring-Writer/books
