--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ psycopg2==2.9.3
 Pygments==2.11.2
 pymdown-extensions==9.2
 pytailwindcss==0.1.4
+python-dotenv==0.19.2
 SQLAlchemy==1.4.31
 text-unidecode==1.3
 Werkzeug==2.0.3
