--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-
 [submodule "static/books"]
 	path = static/books
-	url = https://(os.environ.['GITHUB_LOGIN'])@github.com/Aspiring-Writer/books
+	url = https://Aspiring-Writer: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@github.com/Aspiring-Writer/books
