--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,13 @@ Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.1.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 Pygments==2.11.2
 pymdown-extensions==9.2
 pytailwindcss==0.1.4
+python-dotenv==0.19.2
 SQLAlchemy==1.4.31
 text-unidecode==1.3
 Werkzeug==2.0.3
+WTForms==3.0.1
 zipp==3.7.0
