--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==2.0.3
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
 importlib-metadata==4.11.2
