--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.0.4
 Flask==2.0.3
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
