--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "cookie-session": "^2.0.0",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
     "passport": "^0.6.0",
